objects/Account_Group_Role_Map__mdt.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WM</fullName>
                    <default>true</default>
                    <label>WM</label>
                </value>
                <value>
                    <fullName>RSG</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Account Group Role Map</label>
    <pluralLabel>Account Group Role Maps</pluralLabel>
</CustomObject>